fix z-index on modal

--- a/admin/client/css/main.less
+++ b/admin/client/css/main.less
@@ -668,6 +668,8 @@ table tr th .glyphicon {vertical-align:text-top;}
 .form-group .s-optional {color: @black-30;font-size: 10px;position: relative;top: -1px;}
 input:focus, textarea:focus, select:focus {-webkit-box-shadow: none !important;box-shadow: none !important;}
 
+.modal {z-index: 3003 !important;}
+.modal-backdrop.in {z-index: 3002 !important;}
 .modal-header {padding: 15px;}
 .modal-footer {padding: 8px  15px;}
 .modal-header h3 {font-size: 20px;padding: 0px;margin: 0px;line-height: 20px;}
@@ -1505,7 +1507,7 @@ a.disabled > i.hibachi-ui-radio {background-position:-16px -48px !important; cur
 i.hibachi-ui-radio-checked {background-position:0px -64px;}
 a.disabled > i.hibachi-ui-radio-checked {background-position:-16px -64px !important; cursor:pointer;}
 
-.s-dialog-container {position:absolute;top:0px;height:100%;width:100%;z-index:10001;background-color:@background !important;}
+.s-dialog-container {position:absolute;top:0px;height:100%;width:100%;z-index:3001;background-color:@background !important;}
 .s-dialog-container .s-dialog-content {position:absolute;top:40px;}
 .s-dialog-container .s-dialog-header {position:fixed;top:0px;left:0px;height:40px;width:100%;z-index:3000;.border-radius(0);border:none;box-shadow: 0px -2px 9px #888;}
 .s-dialog-container .s-dialog-footer {position:fixed;bottom:0px;left:0px;height:40px;width:100%;margin-bottom:0px;.border-radius(0);z-index:3000;box-shadow: -3px 2px 9px #888;border:0px;}
